Fix blue scrollbars on Firefox (#3942)

--- a/addons/dark-www/experimental_scratchwww.css
+++ b/addons/dark-www/experimental_scratchwww.css
@@ -1,4 +1,6 @@
 /* Page background */
+html,
+body,
 #view,
 .crash-container,
 .semicolon {
